@@ -966,3 +966,6 @@
 2025-07-30 Fred Gleason <fredg@paravelsystems.com>
 	* Moved the 'AlgoComboBox' widget out of the convenience library
 	into 'davit/'.
+2025-07-30 Fred Gleason <fredg@paravelsystems.com>
+	* Moved the 'ChangePassword' dialog out of the convenience library
+	into 'davit/'.
